# sc_modeling_lab

./: CMakeLists.txt  io_test.c  io_test.h  lscpu  m_mpi.c  m_omp.c  m_omp.h  main.c  matrix.c  matrix.h  matrix.h.gch  plain.c  plain.h  sequential.c
results/: results_naive.txt  results_o0.txt  results_o0_f1.txt  results_o1.txt  results_o1_f1.txt  results_o2.txt  results_o2_f1.txt  results_o3.txt  results_o3_f1.txt  results_o3arch.txt  results_o3arch_f1.txt  results_o3mtune_f1.txt  results_omp.txt
src/: io_test.h  m_mpi.c  m_omp.h  matrix.c  matrix.h  sequential.h
tests/: result1.txt  result2.txt  result3.txt  result4.txt  result5.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
